tests/NormalTests/paczka1/fuzzy1/52833827.err
Error in line 4: JXr A713 60,3
Error in line 7: JXr S555 99,6
Error in line 10: JXr A464 86,0
Error in line 9: A713 A291 33,3
Error in line 17: sIUxB1 S555 8,6
Error in line 32: A713 A464 27,8
